test/Fail/PatternInSystem.err
PatternInSystem.agda:19.13-21.16: error: [PatternInSystem]
Pattern matching or path copatterns not allowed in systems
when checking the definition of .extendedlambda0
